# AntNetActivityBots

./: .gitignore  LICENSE  Readme.md
antshield/: antshield.prt  antshield.stl  antshield.stp
c_project/: CMakeLists.txt  main.cpp
c_project/src/communications/: communication.cpp  communication.h
c_project/src/programms/: standart.h
c_project/src/programms/goto/: gotoRunnable.cpp  gotoRunnable.h
c_project/src/programms/linefollower/: PauseTimer.h  linefollower.cpp  linefollower.h
c_project/src/utils/: c++-alloc.cpp  util.cpp  util.h
c_project/src/utils/data/pins/: pins.h
c_project/src/utils/data/runnables/: cogs.cpp  cogs.h
c_project/src/utils/data/vars/: vars.cpp  vars.h
codeencoder/: build.gradle.kts  settings.gradle
codeencoder/src/main/kotlin/: Encoder.kt
docs/: BarcodeLayout.docx  Code Overview.docx
docs/propware/: links.txt
printables/: 2013Map.xlsx  Map.xlsx
printables/latex/: README.MD  all.tex
routingtable/: build.gradle.kts  build.gradle.kts.old  settings.gradle
routingtable/src/main/kotlin/de/jonasnick/antnet/routingtable/: AntNet.kt
routingtable/src/main/kotlin/de/jonasnick/antnet/routingtable/communication/: AntConnector.kt  ClientHandler.kt  ConnectionManager.kt  ConnectionThreadPool.kt  TestClientConnector.kt
routingtable/src/main/kotlin/de/jonasnick/antnet/routingtable/communication/messages/: BotMessages.kt  PingRequestMSG.kt  PingResponseMSG.kt  RoundaboutRequestMSG.kt  RoundaboutResponseMSG.kt
routingtable/src/main/kotlin/de/jonasnick/antnet/routingtable/data/: AntConstants.kt  AntManager.kt
routingtable/src/main/kotlin/de/jonasnick/antnet/routingtable/data/ants/: AbstractAnt.kt  IAnt.kt  RealAnt.kt  VirtualAnt.kt
routingtable/src/main/kotlin/de/jonasnick/antnet/routingtable/data/map/: Connection.kt  GenMap.kt  Maps.kt  NodeManager.kt
routingtable/src/main/kotlin/de/jonasnick/antnet/routingtable/gui/: BackgroundPanel.kt  ChartManager.kt  GraphManager.kt  GuiSwing.kt
